# rust-dpdk

./: Cargo.toml  README.md  dpdk-install.sh  setup-hugepages.sh
dpdk-sys/: build.rs
rust_example/: Cargo.toml  README.md
